// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index handles hidden flag in frontmatter 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": "a.mdx",
      "id": 1,
      "next": undefined,
      "parent": "",
      "previous": "",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "a",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;

exports[`index handles order in config.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": "b.mdx",
      "id": 1,
      "next": "a",
      "parent": "",
      "previous": "",
      "slug": "b",
      "subtitle": undefined,
      "title": "B",
    },
    Object {
      "children": Array [],
      "file": "a.mdx",
      "id": 2,
      "next": undefined,
      "parent": "",
      "previous": "b",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "b",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;

exports[`index handles order in nested config.json 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "1.mdx",
          "id": 2,
          "next": "hooks",
          "parent": "a",
          "previous": "a",
          "slug": "a/1",
          "subtitle": undefined,
          "title": "1",
        },
      ],
      "file": "a.mdx",
      "id": 1,
      "next": "a/1",
      "parent": "",
      "previous": "",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "usestate.mdx",
          "id": 4,
          "next": "hooks/usereducer",
          "parent": "hooks",
          "previous": "hooks",
          "slug": "hooks/usestate",
          "subtitle": undefined,
          "title": "useState",
        },
        Object {
          "children": Array [],
          "file": "usereducer.mdx",
          "id": 5,
          "next": "hooks/useeffect",
          "parent": "hooks",
          "previous": "hooks/usestate",
          "slug": "hooks/usereducer",
          "subtitle": undefined,
          "title": "Usereducer",
        },
        Object {
          "children": Array [],
          "file": "useeffect.mdx",
          "id": 6,
          "next": "hooks/useref",
          "parent": "hooks",
          "previous": "hooks/usereducer",
          "slug": "hooks/useeffect",
          "subtitle": undefined,
          "title": "Useeffect",
        },
        Object {
          "children": Array [],
          "file": "useref.mdx",
          "id": 7,
          "next": "hooks/usecontext",
          "parent": "hooks",
          "previous": "hooks/useeffect",
          "slug": "hooks/useref",
          "subtitle": undefined,
          "title": "Useref",
        },
        Object {
          "children": Array [],
          "file": "usecontext.mdx",
          "id": 8,
          "next": "hooks/custom_hooks",
          "parent": "hooks",
          "previous": "hooks/useref",
          "slug": "hooks/usecontext",
          "subtitle": undefined,
          "title": "Usecontext",
        },
        Object {
          "children": Array [],
          "file": "custom_hooks.mdx",
          "id": 9,
          "next": undefined,
          "parent": "hooks",
          "previous": "hooks/usecontext",
          "slug": "hooks/custom_hooks",
          "subtitle": undefined,
          "title": "Custom Hooks",
        },
      ],
      "file": "hooks.mdx",
      "id": 3,
      "next": "hooks/usestate",
      "parent": "",
      "previous": "a/1",
      "slug": "hooks",
      "subtitle": undefined,
      "title": "Hooks",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "a",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;

exports[`index reads doubly nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "1.mdx",
          "id": 2,
          "next": "a/2",
          "parent": "a",
          "previous": "a",
          "slug": "a/1",
          "subtitle": undefined,
          "title": "1",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "file": "i.mdx",
              "id": 4,
              "next": "a/2/j",
              "parent": "a/2",
              "previous": "a/2",
              "slug": "a/2/i",
              "subtitle": undefined,
              "title": "I",
            },
            Object {
              "children": Array [],
              "file": "j.mdx",
              "id": 5,
              "next": "b",
              "parent": "a/2",
              "previous": "a/2/i",
              "slug": "a/2/j",
              "subtitle": undefined,
              "title": "J",
            },
          ],
          "file": "2.mdx",
          "id": 3,
          "next": "a/2/i",
          "parent": "a",
          "previous": "a/1",
          "slug": "a/2",
          "subtitle": undefined,
          "title": "2",
        },
      ],
      "file": "a.mdx",
      "id": 1,
      "next": "a/1",
      "parent": "",
      "previous": "",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "1.mdx",
          "id": 7,
          "next": undefined,
          "parent": "b",
          "previous": "b",
          "slug": "b/1",
          "subtitle": undefined,
          "title": "1",
        },
      ],
      "file": "b.mdx",
      "id": 6,
      "next": "b/1",
      "parent": "",
      "previous": "a/2/j",
      "slug": "b",
      "subtitle": undefined,
      "title": "B",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "a",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;

exports[`index reads nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "1.mdx",
          "id": 2,
          "next": "a/2",
          "parent": "a",
          "previous": "a",
          "slug": "a/1",
          "subtitle": undefined,
          "title": "1",
        },
        Object {
          "children": Array [],
          "file": "2.mdx",
          "id": 3,
          "next": "b",
          "parent": "a",
          "previous": "a/1",
          "slug": "a/2",
          "subtitle": undefined,
          "title": "2",
        },
      ],
      "file": "a.mdx",
      "id": 1,
      "next": "a/1",
      "parent": "",
      "previous": "",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "file": "1.mdx",
          "id": 5,
          "next": undefined,
          "parent": "b",
          "previous": "b",
          "slug": "b/1",
          "subtitle": undefined,
          "title": "1",
        },
      ],
      "file": "b.mdx",
      "id": 4,
      "next": "b/1",
      "parent": "",
      "previous": "a/2",
      "slug": "b",
      "subtitle": undefined,
      "title": "B",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "a",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;

exports[`index reads top-level directory 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "file": "a.mdx",
      "id": 1,
      "next": "b",
      "parent": "",
      "previous": "",
      "slug": "a",
      "subtitle": undefined,
      "title": "A",
    },
    Object {
      "children": Array [],
      "file": "b.mdx",
      "id": 2,
      "next": undefined,
      "parent": "",
      "previous": "a",
      "slug": "b",
      "subtitle": undefined,
      "title": "B",
    },
  ],
  "file": "index.mdx",
  "id": 0,
  "next": "a",
  "slug": "",
  "subtitle": undefined,
  "title": "Index",
}
`;
